[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/OBJECTS_TO_ANIMATE/Small Lightning (32x32).png" type="Texture" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/CheckPoint.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63, 27.5 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "DEFAULT"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[node name="CheckPoint" type="Area2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.5 )
shape = SubResource( 1 )

[node name="PickText" type="Label" parent="."]
visible = false
margin_left = -12.0
margin_top = -31.0
margin_right = 9.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 2 )
text = "[F]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/DEFAULT = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 2, 1.8 )
process_parent = true
physics_process_parent = true

[connection signal="area_entered" from="." to="." method="_on_CheckPoint_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_CheckPoint_area_exited"]
